--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,12 +2,12 @@
 <mat-toolbar color="primary">
     <span>Employee Management Crud App</span>
     <span class="example-spacer"></span>
-    <button mat-raised-button color="accent" (click)="openAddEditEmployeeDialog()">ADD EMPLOYEE</button>
+    <button mat-raised-button color="accent" (click)="openAddEditCustomerDialog()">ADD EMPLOYEE</button>
    </mat-toolbar>
    <!-- The body of our app -->
    <div class="main-body">
        <!-- The filter section -->
-       <mat-form-field aria-haspopup="outline">
+       <mat-form-field haspopup="outline">
          <mat-label>Filter</mat-label>
          <input matInput (keyup)="applyFilter($event)" placeholder="i.e David Smith" #input>
        </mat-form-field>
@@ -20,49 +20,33 @@
            </ng-container>
            <ng-container matColumnDef="firstName">
              <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-             <td mat-cell *matCellDef="let row"> {{row.firstName}}</td>
+             <td mat-cell *matCellDef="let row"> {{row.FirstName}}</td>
            </ng-container>
             <ng-container matColumnDef="lastName">
              <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-             <td mat-cell *matCellDef="let row"> {{row.lastName}}</td>
+             <td mat-cell *matCellDef="let row"> {{row.LastName}}</td>
            </ng-container>
             <ng-container matColumnDef="email">
              <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-             <td mat-cell *matCellDef="let row"> {{row.email}}</td>
+             <td mat-cell *matCellDef="let row"> {{row.Email}}</td>
            </ng-container>
-            <ng-container matColumnDef="dob">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> DOB </th>
-             <td mat-cell *matCellDef="let row"> {{row.dob | date}}</td>
+           <ng-container matColumnDef="created">
+             <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
+             <td mat-cell *matCellDef="let row"> {{row.CreatedDate | date}}</td>
            </ng-container>
-            <ng-container matColumnDef="gender">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
-             <td mat-cell *matCellDef="let row"> {{row.gender}}</td>
-           </ng-container>
-            <ng-container matColumnDef="education">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> Education </th>
-             <td mat-cell *matCellDef="let row"> {{row.education}}</td>
-           </ng-container>
-            <ng-container matColumnDef="company">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
-             <td mat-cell *matCellDef="let row"> {{row.company}}</td>
-           </ng-container>
-            <ng-container matColumnDef="experience">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> Experience </th>
-             <td mat-cell *matCellDef="let row"> {{row.experience}}</td>
-           </ng-container>
-            <ng-container matColumnDef="salary">
-             <th mat-header-cell *matHeaderCellDef mat-sort-header> Salary </th>
-             <td mat-cell *matCellDef="let row"> {{row.salary | currency:'USD'}}L</td>
-           </ng-container>
+           <ng-container matColumnDef="updated">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated </th>
+            <td mat-cell *matCellDef="let row"> {{row.LastupDated | date}}</td>
+          </ng-container>
             <ng-container matColumnDef="action">
              <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
              <td mat-cell *matCellDef="let row">
-               <span (click)="openEditForm(row)" class="action-icon" style="margin-right: 5px;">
+               <div (click)="openEditForm(row)" class="action-icon" style="margin-right: 5px;">
                  <mat-icon color="primary">edit</mat-icon>
-               </span>
-               <span (click)="deleteEmployee(row.id)" class="action-icon">
+               </div>
+               <div (click)="deleteCustomer(row.id)" class="action-icon">
                  <mat-icon color="warn">delete</mat-icon>
-               </span>
+               </div>
              </td>
            </ng-container>
     
